--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "Backend for AquaGlow Car Wash Booking System",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "npm run build && node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "migrate": "node dist/database/migrate.js",
     "seed": "node dist/database/seed.js",
-    "test": "jest"
+    "test": "jest",
+    "web" : "npm start"
+
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -38,14 +40,14 @@
     "@types/jest": "^29.5.4",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.5.0",
+    "@types/node": "^20.19.30",
     "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "@types/uuid": "^10.0.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
