--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,13 @@
   "description": "Backend for AquaGlow Car Wash Booking System",
   "main": "dist/server.js",
   "scripts": {
-    "start": "npm run build && node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "migrate": "node dist/database/migrate.js",
-    "seed": "node dist/database/seed.js",
-    "test": "jest",
-    "web" : "npm start"
-
-  },
+  "build": "tsc",
+  "start": "node dist/server.js",
+  "dev": "nodemon src/server.ts",
+  "migrate": "node dist/database/migrate.js",
+  "seed": "node dist/database/seed.js",
+  "test": "jest"
+},
   "dependencies": {
     "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
