--- a/backend/.env
+++ b/backend/.env
@@ -7,8 +7,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=aquaglow_db
 DB_USER=postgres
-DB_PASSWORD=Michelle66@
-
+DB_PASSWORD=Koreaisthebomb24
 # JWT
 JWT_SECRET=your_jwt_secret_key_change_in_production
 JWT_EXPIRY=24h
