--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,13 @@
   "description": "Backend for AquaGlow Car Wash Booking System",
   "main": "dist/server.js",
   "scripts": {
-  "build": "tsc",
-  "start": "node dist/server.js",
-  "dev": "nodemon src/server.ts",
-  "migrate": "node dist/database/migrate.js",
-  "seed": "node dist/database/seed.js",
-  "test": "jest"
-},
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "migrate": "node dist/database/migrate.js",
+    "seed": "node dist/database/seed.js",
+    "test": "jest"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
@@ -22,7 +22,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.13",
-    "pg": "^8.11.3",
+    "pg": "^8.18.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
     "stripe": "^14.11.0",
@@ -44,6 +44,7 @@
     "@types/uuid": "^10.0.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.5",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
